[package]
name = "drone-stm32-drv"
version = "0.11.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
repository = "https://github.com/centosa/drone-stm32-drv"
documentation = "https://docs.rs/drone-stm32-drv/0.11.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
STM32 peripheral drivers for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "experimental" }

[features]
default = []
std = ["drone-core/std", "drone-cortex-m/std", "futures/std"]
adc = ["drone-stm32-map/adc"]
dma = ["drone-stm32-map/dma"]
gpio = ["drone-stm32-map/gpio"]
i2c = ["drone-stm32-map/i2c"]
spi = ["drone-stm32-map/spi"]
tim = ["drone-stm32-map/tim"]
uart = ["drone-stm32-map/uart"]

[dependencies]
core = { version = "0.11.0", package = "libcore-drone" }
drone-core = { version = "0.11.0" }
drone-cortex-m = { version = "0.11.0" }
drone-stm32-map = { version = "0.11.0" }
futures = { version = "0.3.0", default-features = false }
