[package]
name = "drone-stm32-drv-uart"
version = "0.9.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
description = "Drone for STM32. UART driver."
license = "MIT/Apache-2.0"
repository = "https://github.com/drone-os/drone-stm32-drv"

[features]
default = []
stm32f100 = []
stm32f101 = []
stm32f102 = []
stm32f103 = []
stm32f107 = []
stm32l4x1 = []
stm32l4x2 = []
stm32l4x3 = []
stm32l4x5 = []
stm32l4x6 = []
stm32l4r5 = []
stm32l4r7 = []
stm32l4r9 = []
stm32l4s5 = []
stm32l4s7 = []
stm32l4s9 = []

[dependencies.drone-core]
version = "0.9.0"
git = "https://github.com/drone-os/drone-core"
# path = "../../drone-core"

[dependencies.drone-cortex-m]
version = "0.9.0"
git = "https://github.com/drone-os/drone-cortex-m"
# path = "../../drone-cortex-m"

[dependencies.drone-stm32-map]
version = "0.9.0"
git = "https://github.com/drone-os/drone-stm32-map"
# path = "../../drone-stm32-map"

[dependencies.drone-stm32-drv-dma]
version = "0.9.0"
path = "../drv-dma"

[dependencies.futures-preview]
version = "0.2"
default-features = false

[dependencies.failure]
version = "0.1"
default-features = false
features = ["derive"]

[dev-dependencies.test]
version = "0.2"
git = "https://github.com/drone-os/drone-test"
